Add animations and burger menu

--- a/index2.html
+++ b/index2.html
@@ -36,7 +36,7 @@
                 <li><a href="./index.html">Главная</a></li>
                 <li><a href="index3.html">Front/Back-end</a></li>
                 <li><a href="index4.html">UX/UI</a></li>
-                <li><a href="index2.html">PM</a></li>
+                <li><a class="pm_link" href="index2.html">PM</a></li>
                 <li><a href="index5.html">QA</a></li>
               </ul>
             </label>
