--- a/index3.html
+++ b/index3.html
@@ -28,6 +28,19 @@
             <a href="index2.html">PM</a>
             <a href="index5.html">QA</a>
           </nav>
+          <div class="burger">
+            <label>
+              <input type="checkbox" />
+              <span class="menu"> <span class="hamburger"></span> </span>
+              <ul>
+                <li><a href="./index.html">Главная</a></li>
+                <li><a href="index3.html" class="dev_link">Front/Back-end</a></li>
+                <li><a href="index4.html">UX/UI</a></li>
+                <li><a href="index2.html">PM</a></li>
+                <li><a href="index5.html">QA</a></li>
+              </ul>
+            </label>
+          </div>
         </div>
       </header>
       <div class="greeting">
@@ -124,6 +137,42 @@
                 </li>
               </ul>
             </div>
+        </div>
+        
+        <div class="course">
+          <div class="cource_container">
+            <p class="heading">Запись на курс</p>
+            <p class="excerpt">
+              Окунитесь в профессию менеджера IT-проектов. Вместе с Myfreedom
+              пройдите все этапы управления проектом.
+            </p>
+            <a
+              href="https://myfreedom.by/courses/dev"
+              class="course_button"
+              target="_blank"
+              ><span>Записаться</span></a
+            >
+          </div>
+        </div>
+        <p class="heading review_heading">Оставьте Ваш отзыв</p>
+        <p class="excerpt">
+          Каждый день мы работаем над тем, чтобы стать лучше! Нам очень важно
+          знать Ваше мнение о нашем проекте и качестве информации на нём.
+        </p>
+        <div class="review_flex">
+          <div class="review_flex_item">
+            <p>Ваш отзыв</p>
+            <textarea name="review" id="" cols="30" rows="10"></textarea>
+          </div>
+          <div class="review_flex_item">
+            <p>Эл. почта</p>
+            <input type="text" class="email_input" />
+          </div>
+          <div class="review_flex_item">
+            <p>Ваше имя</p>
+            <input type="text" class="name_input" />
+          </div>
+          <a href="#" class="review_button"><span>Отправить</span></a>
         </div>
       </div>
     </main>
