--- a/index5.html
+++ b/index5.html
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -48,7 +48,7 @@
         <div class="container greeting_container">
           <p class="title">Тестируй приложения вместе с нами!</p>
           <p class="subtitle subtitle_greeting">
-              Обеспечивай качество продукта еще на начале разработки!
+            Обеспечивай качество продукта еще на начале разработки!
           </p>
         </div>
       </div>
@@ -56,54 +56,176 @@
     <main>
       <div class="container">
         <div class="pm_description">
-          <div class="pm_description_image">
-            <img src="./img/programming-debug-search-application-software-bug-fix-code-concept_212586-292.webp" alt="qa">
-          </div>
           <div class="pm_description_text">
             <p class="heading pm_heading">Кто такой QA специалист?</p>
             <p class="caption pm_caption">
-              <b>QA Engineer</b> — это специалист по обеспечению качества, деятельность которого направлена на улучшение процесса разработки ПО, предотвращение дефектов и выявление ошибок в работе продукта.
+              <b>QA Engineer</b> — это специалист по обеспечению качества,
+              деятельность которого направлена на улучшение процесса разработки
+              ПО, предотвращение дефектов и выявление ошибок в работе продукта.
             </p>
           </div>
         </div>
         <div class="advantages">
-            <div class="container">
-              <p class="heading heading_advantages">Навыки QA специалиста</p>
-              <ul class="advantages_list">
-                <li class="advantages_item">
-                  <img src="./img/iMac 1.png" alt="Computer" />
-                  <p class="caption">Первое</p>
-                  <p class="description">
-                    Имеется спорная точка зрения, гласящая примерно следующее:рамках
-                    своих собственных рациональных ограничений.
-                  </p>
-                </li>
-                <li class="advantages_item">
-                  <img src="./img/Folder 1.png" alt="Folder" />
-                  <p class="caption">Второе</p>
-                  <p class="description">
-                    Имеется спорная точка зрения, гласящая примерно следующее:рамках
-                    своих собственных рациональных ограничений.
-                  </p>
-                </li>
-                <li class="advantages_item">
-                  <img src="./img/Processor 1.png" alt="Processor" />
-                  <p class="caption">Третье</p>
-                  <p class="description">
-                    Имеется спорная точка зрения, гласящая примерно следующее:рамках
-                    своих собственных рациональных ограничений.
-                  </p>
-                </li>
-              </ul>
+          <div class="container">
+            <p class="heading heading_advantages">Навыки QA специалиста</p>
+            <ul class="advantages_list">
+              <li class="advantages_item">
+                <img src="./img/iMac 1.png" alt="Computer" />
+                <p class="caption">Внимательность</p>
+                <p class="description">
+                  Внимание к мелочам и деталям ‒ это самое главное в работе QA
+                  Engineer. Каждая кнопка и функция должны работать корректно.
+                  Любопытство и внимательность тестировщика помогают компании
+                  создавать лучшие продукты и сервисы, а ему самому достигать
+                  целей.
+                </p>
+              </li>
+              <li class="advantages_item">
+                <img src="./img/Folder 1.png" alt="Folder" />
+                <p class="caption">Аналитика</p>
+                <p class="description">
+                  До начала тестирования необходимо изучить работу программы и
+                  понять, чем она будет полезна пользователю. Для поиска
+                  неполадок и проблем необходимо пройти разные сценарии, искать
+                  ошибки, ставить себя на место пользователя.
+                </p>
+              </li>
+              <li class="advantages_item">
+                <img src="./img/Processor 1.png" alt="Processor" />
+                <p class="caption">Командная работа</p>
+                <p class="description">
+                  Вы точно будете сотрудничать с другими тестировщиками,
+                  программистами, менеджерами проекта и заказчиками.
+                  Взаимодействие с каждым участником проекта позволит найти
+                  оптимальное решение в каждом проекте и по каждому пункту.
+                </p>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="work">
+          <div class="work_container">
+            <div class="heading">Обязанности QA тестировщика</div>
+            <div class="excerpt work_excerpt">Примерный обобщенный список:</div>
+            <div class="work_list">
+              <div class="work_item">
+                <div class="minus"></div>
+                <div class="work_text">
+                  Планирование, разработка и внедрение политики, процессов и
+                  процедуры обеспечения качества
+                </div>
+              </div>
+              <div class="work_item">
+                <div class="minus"></div>
+                <div class="work_text">
+                  Документирование и обновление типовых инструкций и лучших
+                  решений (best practices)
+                </div>
+              </div>
+              <div class="work_item">
+                <div class="minus"></div>
+                <div class="work_text">
+                  Проверка процессов, процедур и документации на соответствие
+                  правилам и стандартам
+                </div>
+              </div>
+              <div class="work_item">
+                <div class="minus"></div>
+                <div class="work_text">
+                  Мониторинг текущих процессов с целью их улучшения
+                </div>
+              </div>
+              <div class="work_item">
+                <div class="minus"></div>
+                <div class="work_text">
+                  Обучение производственных и инженерных групп соблюдению
+                  установленных процессов и процедур
+                </div>
+              </div>
+              <div class="work_item">
+                <div class="minus"></div>
+                <div class="work_text">
+                  Анализ первопричин и внедрение решений, направленных на
+                  устранение проблем, обнаруженных в текущих процессах и
+                  процедурах
+                </div>
+              </div>
+              <div class="work_item">
+                <div class="minus"></div>
+                <div class="work_text">Сбор и оценка отзывы клиентов.</div>
+              </div>
+            </div>
+            <img src="./img/QA_3-940x528.webp" alt="" />
+            <div class="pros">
+              <div class="pros_container">
+                <div class="heading">Плюсы профессии</div>
+                <div class="excerpt">Основные плюсы работы тестировщиком:</div>
+                <div class="pros_list">
+                  <div class="pros_item">
+                    <div class="minus"></div>
+                    <div class="work_text">
+                      Молодая и перспективная профессия
+                    </div>
+                  </div>
+                  <div class="pros_item">
+                    <div class="minus"></div>
+                    <div class="work_text">Низкий порог входа</div>
+                  </div>
+                  <div class="pros_item">
+                    <div class="minus"></div>
+                    <div class="work_text">Творческий подход</div>
+                  </div>
+                  <div class="pros_item">
+                    <div class="minus"></div>
+                    <div class="work_text">Бесконечное развитие</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="pros">
+              <div class="pros_container">
+                <div class="heading">Минусы профессии</div>
+                <div class="excerpt">
+                  Как и любая деятельность, представленное направление имеет ряд
+                  минусов. Основные недостатки профессии:
+                </div>
+                <div class="pros_list">
+                  <div class="pros_item">
+                    <div class="minus"></div>
+                    <div class="work_text">Сидячий образ жизни</div>
+                  </div>
+                  <div class="pros_item">
+                    <div class="minus"></div>
+                    <div class="work_text">Рутина</div>
+                  </div>
+                  <div class="pros_item">
+                    <div class="minus"></div>
+                    <div class="work_text">Чувство ответственности</div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
-          
+        </div>
+        <div class="salary">
+          <div class="salary_container">
+            <div class="heading">Зарплаты</div>
+            <div class="excerpt salary_excerpt">
+              Информация о среднем заработке американского инженера по Quality
+              Assurance взята из интернета. Примерная годовая зарплата QA
+              Engineer в США составляет 72 тысячи долларов, то есть 6000 в
+              месяц. Сумму можно считать приблизительной, поскольку реальный
+              доход зависит от квалификации, места работы, региона (штата) и
+              других условий.
+            </div>
+          </div>
+        </div>
         <div class="course">
           <div class="cource_container">
             <p class="heading">Запись на курс</p>
             <p class="excerpt">
-              Окунитесь в профессию менеджера IT-проектов. Вместе с Myfreedom
-              пройдите все этапы управления проектом.
+              Вы освоите интересную и востребованную IT-профессию – QA (quality
+              assurance). Вас ждет практическая отработка материала на проекте!.
             </p>
             <a
               href="https://myfreedom.by/courses/qa"
@@ -136,13 +258,13 @@
       </div>
     </main>
     <footer>
-        <nav class="menu footer_menu">
-          <a href="./index.html">Главная</a>
-          <a href="index3.html">Front/Back-end</a>
-          <a href="index4.html">UX/UI</a>
-          <a href="index2.html">PM</a>
-        </nav>
-        <p class="copy">Copyright IT Conductor, 2022</p>
-      </footer>
+      <nav class="menu footer_menu">
+        <a href="./index.html">Главная</a>
+        <a href="index3.html">Front/Back-end</a>
+        <a href="index4.html">UX/UI</a>
+        <a href="index2.html">PM</a>
+      </nav>
+      <p class="copy">Copyright IT Conductor, 2022</p>
+    </footer>
   </body>
 </html>
